Bug 150817 - Skia: Assertion fails in debug build with presentation with console on two screens
Summary: Skia: Assertion fails in debug build with presentation with console on two sc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2022-09-05 22:24 UTC by Regina Henschel
Modified: 2022-09-14 06:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Callstack by VS2019 (5.88 KB, text/plain)
2022-09-05 22:24 UTC, Regina Henschel
Details
Skia.log (37 bytes, text/plain)
2022-09-06 08:05 UTC, Regina Henschel
Details
Info about graphic card (2.88 KB, text/plain)
2022-09-06 17:29 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-09-05 22:24:18 UTC
Created attachment 182240 [details]
Callstack by VS2019

Make sure Skia is enabled.
Make sure presenter console is enabled.
Make sure a second screen is attached.
Load a presentation.
Start slideshow => Crash.

I see the error in Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 81a7c2543e04eb6792fccece01f514bf653a5ad0
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded
Comment 1 Julien Nabet 2022-09-06 06:44:50 UTC
Could you give a try at https://wiki.documentfoundation.org/QA/FirstSteps#Graphics-related_issues_.28_Skia_.29 if you still reproduce the assertion provide: <user profile>/cache/skia.log ?
Comment 2 Regina Henschel 2022-09-06 08:05:40 UTC
Created attachment 182245 [details]
Skia.log

The error does not happen, if I disable Skia.
Comment 3 Julien Nabet 2022-09-06 15:42:37 UTC
Did you check you got last upgrade of the driver of your graphic card?

Also, I thought that brand of the graphic card and other info were in skia.log
Comment 4 Regina Henschel 2022-09-06 17:29:24 UTC
Created attachment 182268 [details]
Info about graphic card

(In reply to Julien Nabet from comment #3)
> Did you check you got last upgrade of the driver of your graphic card?

It is an onboard-card and I surely will not do any such deep update without a very strong need.
 
> 
> Also, I thought that brand of the graphic card and other info were in
> skia.log

I have attached the info from the Intel software.

Look at the comment at the assert:
assert(mAnyAccessCount == 0); // can't reset mBuffer if there's a read access pointing to it
https://opengrok.libreoffice.org/xref/core/vcl/skia/salbmp.cxx?r=2692dc5f#1311

I doubt that it is a problem with a specific graphics card.
Comment 5 Julien Nabet 2022-09-06 17:41:23 UTC
Thank you for your feedback Regina.

About graphic card driver, it's not big deal to update but no pb.
Since I know nothing more about Skia (so my knowledge is very near to null :-)), I'll let Luboš, the Skia's expert, talk.
Comment 6 Commit Notification 2022-09-14 06:06:27 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20de4e3ca38e177ea61e818b32d82008758b8caa

do not check and refcount Info access to Skia bitmaps (tdf#150817)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.